fixed search input alignment

--- a/src/styles/search.scss
+++ b/src/styles/search.scss
@@ -1,4 +1,5 @@
 .rbt {
   display: inline-flex !important;
   width: 200px;
+  vertical-align: top;
 }
